<resources>
    <string name="app_name">MyChat</string>

    <string name="lb_gender">Tôi là:</string>
    <string name="lb_birthdate">Ngày sinh:</string>
    <string name="action_register">ĐĂNG KÝ</string>
    <string name="link_login">Đã có tài khoản ? Đăng nhập ngay tại đây !</string>
    <string name="hint_fullname">Họ tên</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_confirm_password">Nhắc lại mật khẩu</string>
    <string name="hint_birthdate">Ngày sinh</string>

    <!--ERROR VALIDATION-->
    <string name="err_validate_fullname">Minimum length of fullname is 2 characters</string>
    <string name="err_validate_email">Wrong type email</string>
    <string name="err_validate_password">Password must be greater than 4 characters</string>
    <string name="err_validate_confirm_password">Confirm password must be same with password</string>
    <string name="err_not_submit_because_not_validated">You must fill required fields before submit</string>

    <!--BINDING VALIDATION-->
    <string name="tag_val_fullname">fullname</string>
    <string name="tag_val_email">email</string>
    <string name="tag_val_password">password</string>
    <string name="tag_val_confirm_password">confirm password</string>
    <string name="tag_val_phone">phone</string>

    <string name="msg_registering">Đang đăng ký &#8230;</string>
    <string name="msg_register_success">Đăng ký thành công ! Bạn được đăng nhập tự động !</string>
    <string name="msg_not_navigate_to_home">Không thể chuyển sang màn hình chính !</string>
    <string name="msg_register_failed">Đăng ký thất bại !</string>

    <string name="msg_signining">Đang đăng nhập &#8230;</string>
    <string name="msg_signin_success">Đăng nhập thành công !</string>
    <string name="msg_signin_failed">Đăng nhập thất bại !</string>
    <string name="action_signin">ĐĂNG NHẬP</string>
    <string name="action_link_signup">Chưa có tài khoản ? Đăng ký tại đây</string>

    <!--CUSTOM SEARCH VIEW-->
    <string name="hint_input_custom_search_view">Tìm kiếm</string>

    <string name="title_menu_home">Home</string>
    <string name="title_menu_photograph">Photograph</string>
    <string name="title_menu_setting">Setting</string>

    <string name="title_tab_messages">TIN NHẮN</string>
    <string name="title_tab_active_users">HOẠT ĐỘNG</string>
    <string name="title_tab_chat_groups">NHÓM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>