<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="account"
            type="vn.com.tma.vo_ngoc_hanh.mychat.base.db.account.Account" />

        <variable
            name="fullnameValidator"
            type="vn.com.tma.vo_ngoc_hanh.mychat.screen.register.IValidator" />

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.register.RegisterFragment">

        <android.support.constraint.ConstraintLayout
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_x4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:src="@drawable/ic_register_108_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- FullName Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                app:bindValidator="@{fullnameValidator}"
                style="@style/TextInputLayout.Login"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon">

                <EditText
                    android:id="@+id/edt_fullname"
                    app:bindValidator="@{fullnameValidator}"
                    android:text="@{account.name}"
                    style="@style/EditText.Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fullname"
                    android:inputType="text"
                    android:theme="@style/EditText.Login" />

            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                style="@style/TextInputLayout.Login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <EditText
                    android:id="@+id/input_email"
                    style="@style/EditText.Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:theme="@style/EditText.Login" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                style="@style/TextInputLayout.Login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <EditText
                    android:id="@+id/input_password"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    style="@style/EditText.Login"
                    android:theme="@style/EditText.Login"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/TextInputLayout.Login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password">

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_password"
                    style="@style/EditText.Login"
                    android:theme="@style/EditText.Login"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_lb_gender"
                android:text="@string/lb_gender"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_lb_large"
                app:layout_constraintTop_toBottomOf="@+id/til_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="0dp"
                app:layout_constraintTop_toTopOf="@id/tv_lb_gender"
                app:layout_constraintBottom_toBottomOf="@+id/tv_lb_gender"
                app:layout_constraintStart_toEndOf="@id/tv_lb_gender"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_lb_birthdate"
                android:text="@string/lb_birthdate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_lb_large"
                app:layout_constraintTop_toBottomOf="@+id/tv_lb_gender"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_x2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_birthdate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_lb_large"
                app:layout_constraintStart_toEndOf="@id/tv_lb_birthdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_lb_birthdate"
                app:layout_constraintBottom_toBottomOf="@+id/tv_lb_birthdate"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lb_birthdate"
                android:padding="@dimen/padding_large"
                android:textColor="@android:color/white"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:textSize="@dimen/textSize_lb_large"
                android:background="@color/colorLoginButton"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <TextView
                android:id="@+id/tv_link_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                android:text="@string/link_login"
                android:gravity="center"
                android:textSize="@dimen/textSize_lb_small"
                android:textColor="@android:color/white"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>