<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.login.LoginFragment">

    <data>

        <variable
            name="viewmodel"
            type="vn.com.tma.vo_ngoc_hanh.mychat.screen.login.LoginViewModel" />

        <variable
            name="validationManager"
            type="vn.com.tma.vo_ngoc_hanh.mychat.base.validator.ValidatorManager" />

        <variable
            name="email"
            type="String" />

        <variable
            name="password"
            type="String" />

    </data>

    <ScrollView
        android:id="@+id/frameLayout"
        android:background="@drawable/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:padding="@dimen/padding_x2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/gl_top_field_input"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:layout_constraintGuide_begin="400dp"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_login_108_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Email Label -->
            <EditText
                android:id="@+id/input_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/input_password"
                android:layout_marginBottom="@dimen/margin_x4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:bindValidatorManager="@{validationManager}"
                app:validatorTag="@{@string/tag_val_email}"
                app:error="@{@string/err_validate_email}"
                android:hint="@string/hint_email"
                android:text="@={email}"
                android:inputType="textEmailAddress"
                style="@style/EditText.Login"
                android:theme="@style/EditText.Login"/>

            <!-- Password Label -->
            <EditText
                android:id="@+id/input_password"
                android:text="@={password}"
                android:textCursorDrawable="@drawable/color_cursor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/gl_top_field_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:bindValidatorManager="@{validationManager}"
                app:validatorTag="@{@string/tag_val_password}"
                app:error="@{@string/err_validate_password}"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                style="@style/EditText.Login"
                android:theme="@style/EditText.Login"/>

            <vn.com.tma.vo_ngoc_hanh.mychat.base.custom_view.CustomProgressView
                android:id="@+id/prg_view"
                app:bindShowState="@{viewmodel.isLoading}"
                app:prg_view_text_color="@android:color/white"
                app:prg_view_text_align="left"
                app:prg_view_text_size="@dimen/textSize_lb_normal"
                app:prg_view_message="@string/msg_signining"
                android:layout_marginTop="@dimen/margin_x4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_password"/>

            <Button
                android:id="@+id/btn_login"
                app:bindEnableStateForButton="@{validationManager.isValidate}"
                android:onClick="@{() -> viewmodel.onSubmit(email, password, validationManager.isValidate)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_goneMarginTop="@dimen/margin_x5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prg_view"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:text="@string/action_signin"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/bg_btn_submit_authenticate"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <TextView
                android:id="@+id/tv_link_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                android:text="@string/action_link_signup"
                android:gravity="center"
                android:textSize="@dimen/textSize_lb_small"
                android:textColor="@android:color/white"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>